tests/success/switch_function_arg.bz
function foo(#const val)
{
}

function bar(i: int32)
{
	foo(switch (i) {
		0 => [ 0, 0.0, "zero" ],
		1 => [ 1, 1.0, "one" ],
		else => unreachable,
	});
}

function baz()
{
	(consteval bar(0));
}
