tests/error/comptime/check_inplace_construct6.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);

		__builtin_inplace_construct(p, [ 0, 0 ]);
		__builtin_inplace_construct(&(*p)[0], 0);
	});
}
